--- a/cristianoso19/package.json
+++ b/cristianoso19/package.json
@@ -13,5 +13,8 @@
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.8",
     "tailwindcss": "^3.4.14"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.14"
   }
 }
