--- a/cristianoso19/package.json
+++ b/cristianoso19/package.json
@@ -15,6 +15,8 @@
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "daisyui": "^4.12.14"
+    "daisyui": "^4.12.14",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
