--- a/cristianoso19/package.json
+++ b/cristianoso19/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "daisyui": "^4.12.14",
-    "prettier": "^3.3.3",
+    "prettier": "3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
 }
